--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,13 +33,14 @@ android {
 }
 
 dependencies {
-
+    implementation 'com.prolificinteractive:material-calendarview:1.4.3'
     implementation 'com.google.android.material:material:1.2.1'
     implementation 'com.vincentbrison.openlibraries.android:foldablelayout:0.0.1@aar'
     implementation 'com.jakewharton:butterknife:10.0.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.viewpager:viewpager:1.0.0'
     implementation 'androidx.viewpager2:viewpager2:1.1.0-alpha01'
+    implementation 'androidx.navigation:navigation-ui:2.3.3'
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.1.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation "androidx.lifecycle:lifecycle-viewmodel:2.2.0"
