--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,9 @@ allprojects {
 
         maven {
             url 'https://navercorp.bintray.com/maps'
+
         }
+        maven { url 'https://jitpack.io' }
     }
 }
 
